# RoboManipBaselines

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: install.yml  pre-commit.yml
doc/: EnvironmentCatalog.md  QuickStart.md  dataset_list.md  environment_catalog.md  evaluation_results.md  how_to_add_env.md  install.md  learned_parameters.md  mujoco_tactile_sensor.md  quick_start.md  real_robot_experiments.md  real_ur5e.md  rmb-data-format.md  rmb_data_format.md  training_tips.md
examples/act_kimura/: README.md
examples/sarnn/: README.md
examples/sarnn_kimura/: README.md
multimodal_robot_model/: __init__.py
multimodal_robot_model/.mt-act_work-in-progress/: RANMEMO.txt
multimodal_robot_model/.mt-act_work-in-progress/roboagent/: constants.py  evaluate.py  train.py
multimodal_robot_model/act/: README.md  __init__.py
multimodal_robot_model/act/lib/: RolloutAct.py  constants.py  utils.py
multimodal_robot_model/act/libs/: RolloutAct.py  constants.py  utils.py
multimodal_robot_model/act/real/: rollout_ur5e.py
multimodal_robot_model/act/scripts/: iterate_rollout.sh
multimodal_robot_model/common/: DataManager.py  DataManagerVec.py  MotionManager.py  RecordManager.py  RolloutBase.py  VisionUtils.py  __init__.py
multimodal_robot_model/common/rollout/: RolloutBase.py  RolloutIsaacUR5eCabinet.py  RolloutIsaacUR5eChain.py  RolloutMujocoAlohaCable.py  RolloutMujocoUR5eCable.py  RolloutMujocoUR5eCloth.py  RolloutMujocoUR5eParticle.py  RolloutMujocoUR5eRing.py  RolloutMujocoXarm7Cable.py  RolloutMujocoXarm7Ring.py  RolloutRealUR5eDemo.py  RolloutRealUR5eGear.py  __init__.py
multimodal_robot_model/common/tasks/: RolloutMujocoUR5eCable.py  RolloutMujocoUR5eCloth.py  RolloutMujocoUR5eParticle.py  RolloutMujocoUR5eRing.py  RolloutRealUR5eGear.py  RolloutUR5eCable.py  RolloutUR5eCloth.py  RolloutUR5eParticle.py  RolloutUR5eRing.py  __init__.py
multimodal_robot_model/demos/: .gitignore  DemoTeleopBase.py  DemoTeleopUR5eCable.py  DemoTeleopUR5eCloth.py  DemoTeleopUR5eParticle.py  DemoTeleopUR5eRing.py  DemoTeleopUR5eScoop.py  DemoUtils.py  Demo_UR5eCableEnv_Playback.py  Demo_UR5eCableEnv_Teleop.py  README.md  Utils_UR5eCableEnv.py  demo_UR5eCableEnv_RandomAction.py  demo_UR5eCableEnv_Teleop.py  utils_UR5eCableEnv.py
multimodal_robot_model/diffusion_policy/: README.md  __init__.py  mujoco_diffusion_policy_cnn.yaml  requirements.txt
multimodal_robot_model/diffusion_policy/lib/: RolloutDiffusionPolicy.py
multimodal_robot_model/diffusion_policy/scripts/: iterate_rollout.sh
multimodal_robot_model/envs/: README.md  __init__.py
multimodal_robot_model/envs/isaac/: IsaacUR5eCabinetEnv.py  IsaacUR5eChainEnv.py  IsaacUR5eEnvBase.py  __init__.py
multimodal_robot_model/envs/mujoco/: MujocoEnvBase.py  MujocoUR5eCableEnv.py  MujocoUR5eClothEnv.py  MujocoUR5eEnvBase.py  MujocoUR5eRingEnv.py  (+8 more)
multimodal_robot_model/mt_act/: README.md  __init__.py
multimodal_robot_model/mtact/: README.md  __init__.py
multimodal_robot_model/sarnn/: README.md  __init__.py
multimodal_robot_model/teleop/: README.md  TeleopBase.py  TeleopMujocoUR5eCable.py  TeleopMujocoUR5eCloth.py  TeleopMujocoUR5eParticle.py  TeleopMujocoUR5eRing.py  TeleopRealUR5eGear.py  __init__.py
multimodal_robot_model/utils/: README.md  check_data.py  convert_npz_to_zarr.py  convert_rosbag_to_npz.py  make_dataset.py  make_multi_dataset.py  npz_to_zarr.py  tile_rollout_videos.py  tile_rollout_videos_dull.py  tile_teleop_videos.py  trim_npz.py  visualize_data.py
robo_manip_baselines/act/: README.md  RolloutAct.py  TrainAct.py  __init__.py
robo_manip_baselines/common/: DataKey.py  DataManager.py  DataManagerVec.py  DataUtils.py  DatasetBase.py  MathUtils.py  MiscUtils.py  MotionManager.py  Phase.py  PhaseBase.py  PhaseManager.py  RolloutBase.py  TrainBase.py  VisionUtils.py  __init__.py
robo_manip_baselines/diffusion_policy/: README.md  RolloutDiffusionPolicy.py  TrainDiffusionPolicy.py  __init__.py  requirements.txt
robo_manip_baselines/envs/: README.md  __init__.py
robo_manip_baselines/misc/: AddPointCloudToRmbData.py  AddPointCloudtoRmbData.py  AutoEval.py  CompareHdf5.py  CompareRmbData.py  ConvertHdf5ToRmb.py  ConvertRmbData.py  ConvertRmbToHdf5.py  DisplayCameraImage.py  PrintRmbData.py  README.md  RefineRmbData.py  TileRolloutVideos.py  VisualizeData.py  tile_teleop_videos.py
robo_manip_baselines/mlp/: MlpDataset.py  RolloutMlp.py  TrainMlp.py  __init__.py
robo_manip_baselines/mt_act/: README.md  __init__.py
robo_manip_baselines/rollout/: __init__.py
robo_manip_baselines/sarnn/: README.md  RolloutSarnn.py  SarnnPolicy.py  TrainSarnn.py  __init__.py
robo_manip_baselines/scripts/: AutoSuccessRateReport.py
robo_manip_baselines/teleop/: GelloInputDevice.py  InputDeviceBase.py  KeyboardInputDevice.py  README.md  SpacemouseInputDevice.py  SpacemouseMobileInputDevice.py  TeleopBase.py  TeleopBaseVec.py  __init__.py
robo_manip_baselines/tests/: TestAutoSuccessRateReport.py  TestDataUtils.py  TestRealEnvBaseGetInfo.py
robo_manip_baselines/utils/: ConvertHdf5ToRmb.py  ConvertRmbToHdf5.py  DisplayCameraImage.py  README.md  TileRolloutVideos.py  VisualizeData.py  array_utils.py  check_data.py  convert_npz_to_zarr.py  convert_yaml_to_pptx.py  make_dataset.py  make_multi_dataset.py  renew_data.py  tile_rollout_videos.py  tile_teleop_videos.py  trim_npz.py  visualize_data.py
snippets/: adddata_embedding.py
(+365 files in other folders)
