[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robo_manip_baselines"
description = "Software that integrates various imitation learning methods and benchmark task environments to provide baselines for robot manipulation"
readme = "README.md"
authors = [
  {name = "Masaki Murooka", email = "m-murooka@aist.go.jp"},
  {name = "Tomohiro Motoda", email = "tomohiro.motoda@aist.go.jp"},
  {name = "Ryoichi Nakajo", email = "ryoichi-nakajo@aist.go.jp"},
]
maintainers = [
  {name = "Masaki Murooka", email = "m-murooka@aist.go.jp"},
]
requires-python = ">= 3.8"
dependencies = [
  "ipdb",
  "ipython",
  "gymnasium==1.0.0",
  "mujoco==3.1.6",
  "matplotlib>=3.3.4",
  "imageio >=2.14.1",
  "pyyaml",
  "tqdm",
  "numpy",
  "h5py",
  "scipy>=1.7.0",
  "opencv-python",
  "pin",
  "pyspacemouse",
  "torch",
  "torchvision",
  "tensorboard",
]
dynamic = ["version"]

[project.optional-dependencies]
sarnn = [
  "scikit-learn>=1.3.0",
  "torchinfo",
  "gdown",
]
act = [
  "packaging",
  "pyquaternion",
]
diffusion-policy = [
  "cffi",
  "zarr>=2.12.0",
  "numcodecs",
  "hydra-core",
  "einops",
  "dill",
  "scikit-video>=1.1.11",
  "scikit-image>=0.19.3",
  "pymunk",
  "wandb",
  "threadpoolctl",
  "cython",
  "imageio-ffmpeg",
  "termcolor",
  "tensorboard>=2.10.1",
  "tensorboardx>=2.5.1",
  "psutil",
  "click",
  "pandas",
  "diffusers==0.11.1",
  "robomimic==0.2.0",
  "huggingface_hub==0.21.4",
  "urllib3<2",
]
real-ur5e = [
  "ur_rtde",
  "pyrealsense2",
]
real-xarm7 = [
  "xArm-Python-SDK",
  "pyrealsense2",
]
benchmarks = [
  "ruamel.yaml",
  "python-pptx",
  "imageio-ffmpeg",
  "ffmpeg-python",
]

[tool.setuptools.packages.find]
include = ["robo_manip_baselines", "robo_manip_baselines.*"]
